--- a/h1ds_summary/templates/h1ds_summary/summary_base.html
+++ b/h1ds_summary/templates/h1ds_summary/summary_base.html
@@ -2,74 +2,91 @@
 
 {% load templatetable %}
 
-{% block leftpanel %}
-
-<h3>enable attributes</h3>
-<table width="100%" class="side-table">
-  {% table item excluded_attrs 2 %}
-  {% if table.startrow %}
-  {% if table.oddrow %}
-  <tr class="highlight">
-    {% else %}
-  <tr>
-    {% endif %}
-    {% endif %}
-    {% if table.lastcellinrow %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
-      {% else %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
-      {% endif %}
-      <div class="options displayNone"></div>
-      <a href="?enable_attr={{item}}">{{item}}</a>
-    </td>
-    {% if table.endrow %}
-  </tr>
-  {% endif %}
-  {% endtable %}
-</table>
-
-<h3>disable attributes</h3>
-<table width="100%" class="side-table">
-  {% table item included_attrs 2 %}
-  {% if table.startrow %}
-  {% if table.oddrow %}
-  <tr class="highlight">
-    {% else %}
-  <tr>
-    {% endif %}
-    {% endif %}
-    {% if table.lastcellinrow %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
-      {% else %}
-    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
-      {% endif %}
-      <div class="options displayNone"></div>
-      <a href="?disable_attr={{item}}">{{item}}</a>
-    </td>
-    {% if table.endrow %}
-  </tr>
-  {% endif %}
-  {% endtable %}
-</table>
-{% endblock %}
-
 {% block content %}
-{% block summarycontent%}{% endblock summarycontent %}
+<div class="column w80">
+  <div class="portlet" id="summary-portlet-data">
+    <div class="portlet-header">summary data</div>
+    <div class="portlet-content">
+      {% block summarycontent%}{% endblock summarycontent %}
+    </div>
+  </div>
+</div>
+<div class="column w20" id="summary-column-right">
+  <div class="portlet" id="summary-portlet-enable">
+    <div class="portlet-header">enable attributes</div>
+    <div class="portlet-content">
+      <div class="sidebarcontent">
+	<table width="100%" class="side-table">
+	  {% table item excluded_attrs 2 %}
+	  {% if table.startrow %}
+	  {% if table.oddrow %}
+	  <tr class="highlight">
+	    {% else %}
+	  <tr>
+	    {% endif %}
+	    {% endif %}
+	    {% if table.lastcellinrow %}
+	    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
+	      {% else %}
+	    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
+	      {% endif %}
+	      <div class="options displayNone"></div>
+	      <a href="?enable_attr={{item}}">{{item}}</a>
+	    </td>
+	    {% if table.endrow %}
+	  </tr>
+	  {% endif %}
+	  {% endtable %}
+	</table>
+      </div>
+    </div>
+  </div>
 
+  <div class="portlet" id="summary-portlet-disable">
+    <div class="portlet-header">disable attributes</div>
+    <div class="portlet-content">
+      <div class="sidebarcontent">
+	<table width="100%" class="side-table">
+	  {% table item included_attrs 2 %}
+	  {% if table.startrow %}
+	  {% if table.oddrow %}
+	  <tr class="highlight">
+	    {% else %}
+	  <tr>
+	    {% endif %}
+	    {% endif %}
+	    {% if table.lastcellinrow %}
+	    <td class="{% if table.oddrow %}highlightableCell {% endif %}cellAutoAdjust">
+	      {% else %}
+	    <td class="{% if table.oddrow %}highlightableCell {% endif %}left cellAutoAdjust">
+	      {% endif %}
+	      <div class="options displayNone"></div>
+	      <a href="?disable_attr={{item}}">{{item}}</a>
+	    </td>
+	    {% if table.endrow %}
+	  </tr>
+	  {% endif %}
+	  {% endtable %}
+	</table>
+      </div>
+    </div>
+  </div>
+{% if perms.h1ds_summary.add_summaryattribute %}
+  <div class="portlet" id="summary-portlet-sql">
+    <div class="portlet-header">SQL query</div>
+    <div class="portlet-content">
+      <div class="sidebarcontent fullform">
+	<form action="{% url raw-sql %}" method="post">{% csrf_token %}
+	  <span class="left">select</span>
+	  <INPUT style="width:100%" type="text" id="select" name="select" value="{{select}}"/>
+	  <span class="left">where</span>
+	  <textarea style="width:100%" id="where" name="where">{{where}}</textarea>
+	  <INPUT title="submit query" type="submit" value="&#x21b5;" />
+	</form>
+      </div>
+    </div>
+  </div>
+{% endif %}
+</div>
 {% endblock content %}
 
-{% block rightpanel %}
-{% if perms.h1ds_summary.add_summaryattribute %}
-<h3>SQL query</h3>
-<div class="sidebarcontent fullform">
-<form action="{% url raw-sql %}" method="post">{% csrf_token %}
-  <span class="left">select</span>
-    <INPUT style="width:100%" type="text" id="select" name="select" value="{{select}}"/>
-    <span class="left">where</span>
-    <textarea style="width:100%" id="where" name="where">{{where}}</textarea>
-    <INPUT title="submit query" type="submit" value="&#x21b5;" />
-</form>
-</div>
-{% endif %}
-
-{% endblock rightpanel %}
