--- a/h1ds_core/static/css/style.css
+++ b/h1ds_core/static/css/style.css
@@ -540,7 +540,456 @@ input, textarea, select {
     margin: 0 0 0 3px;
 }
 
-/* moin */
+/* =============================================================================
+   Moin moin styles
+   ========================================================================== */
+
+/* =============================================================================
+   from common.css
+   ========================================================================== */
+
+/* TableOfContents macro */
+div.table-of-contents {
+    border: 1px solid #bbbbbb;
+    color: black;
+    background-color: #eeeeee;
+    font-size: 80%;
+    text-align: left;
+    margin: 0.5em 0 0.5em 1em;
+    padding: 0.5em 0.75em 0.5em 0.5em;
+    max-width: 50%;
+    display: inline-table;
+}
+div.table-of-contents ol {
+    margin: 0;
+    padding: 0 0 0 2em;
+}
+div.table-of-contents ul {
+    margin: 0;
+    list-style:none;
+}
+div.table-of-contents li {
+    margin:0;
+    padding: 0;
+}
+p.table-of-contents-heading {
+    font-weight:bold;
+    padding:0;
+    margin: 0 0 0.5em 0;
+    letter-spacing: 0.075em;
+}
+
+/* Navigation macro */
+table.navigation {
+    background: #fff;
+    margin: 0;
+}
+
+.footnotes div {
+    width: 5em;
+    border-top: 1pt solid gray;
+}
+
+.footnotes ol {
+    padding: 0 2em;
+    margin: 0 0 1em;
+}
+
+.footnotes li {
+}
+
+.info {
+    float: right;
+    font-size: 0.7em;
+    color: gray;
+}
+
+#pageinfo {
+    margin-top: 2em;
+}
+
+.seperator {
+    color: gray;
+}
+
+#pagebottom {clear: both;}
+
+/* standard rule ---- */
+hr {
+    height: 1pt;
+    background-color: #9C9C9C;
+    border: 0;
+}
+
+/* custom rules ----- to ---------- */
+.hr1 {height: 2pt;}
+.hr2 {height: 3pt;}
+.hr3 {height: 4pt;}
+.hr4 {height: 5pt;}
+.hr5 {height: 6pt;}
+.hr6 {height: 7pt;}
+
+/* Replacement for deprecated html 3 <u> element and html 4 <strike> */
+.u {text-decoration: underline;}
+.strike {text-decoration: line-through;}
+
+/* eye catchers */
+.warning
+{
+    color: red;
+}
+
+.error
+{
+    color: red;
+}
+
+strong.highlight
+{
+    background-color: #CCE0FF;
+    padding: 1pt;
+}
+
+
+/* Recent changes */
+
+.rcrss {
+    float: right;
+    margin: 0;
+}
+
+.recentchanges[dir="rtl"] .rcrss {
+    float: left;
+}
+
+.recentchanges table {
+    clear: both;
+}
+
+.recentchanges td {
+    vertical-align: top;
+    border: none;
+    border-bottom: 1pt solid #E6EAF0;
+    background: #F2F4F7;
+}
+
+.rcdaybreak td {
+    background: #B8C5D9;
+    border: none;
+}
+
+.rcdaybreak td a {
+    font-size: 0.88em;
+}
+
+.rcicon1, .rcicon2 {
+    text-align: center;
+}
+
+.rcpagelink {
+    width: 33%;
+}
+
+.rctime {
+    font-size: 0.88em;
+    white-space: nowrap;
+}
+
+.rceditor {
+    white-space: nowrap;
+    font-size: 0.88em;
+}
+
+.rccomment {
+    width: 50%;
+    color: gray;
+    font-size: 0.88em;
+}
+
+
+/* User Preferences */
+
+.userpref table, .userpref td {
+    border: none;
+}
+
+/* CSS for new code_area markup used by Colorizer and ParserBase */
+
+div.codemsg {
+    margin: 0.5em 0;
+    padding: 0.5em;
+    padding-left:2.5em;
+    background:none;
+    border: 1pt solid #CCBDAE;
+    background-color: #F7F0E0;
+    background-image:url('../img/alert.png');
+    background-repeat:no-repeat;
+    background-position: 0.5em 0.5em;
+    color: black;
+}
+
+div.codearea { /* the div makes the border */
+    margin: 0.5em 0;
+    padding: 0;
+    border: 1pt solid #AEBDCC;
+    background-color: #F3F5F7;
+    color: black;
+}
+
+div.codearea pre { /* the pre has no border and is inside the div */
+    margin: 0;
+    padding: 10pt;
+    border: none;
+}
+
+a.codenumbers { /* format of the line numbering link */
+    margin: 0 10pt;
+    font-size: 0.85em;
+    color: gray;
+}
+
+/* format of certain syntax spans */
+div.codearea pre span.LineNumber {color: gray;}
+div.codearea pre span.ID         {color: #000000;}
+div.codearea pre span.Operator   {color: #0000C0;}
+div.codearea pre span.Char       {color: #004080;}
+div.codearea pre span.Comment    {color: #008000;}
+div.codearea pre span.Number     {color: #0080C0;}
+div.codearea pre span.String     {color: #004080;}
+div.codearea pre span.SPChar     {color: #0000C0;}
+div.codearea pre span.ResWord    {color: #A00000;}
+div.codearea pre span.ConsWord   {color: #008080; font-weight: bold;}
+div.codearea pre span.Error      {color: #FF8080; border: solid 1.5pt #FF0000;}
+div.codearea pre span.ResWord2   {color: #0080ff; font-weight: bold;}
+div.codearea pre span.Special    {color: #0000ff;}
+div.codearea pre span.Preprc     {color: #803999;}
+
+/* for diff parser */
+div.codearea pre span.DiffAdded   {color: #4876FF;}
+div.codearea pre span.DiffRemoved {color: #FF0000;}
+div.codearea pre span.DiffChanged {color: #FF7F50;}
+div.codearea pre span.DiffSeparator {color: #228B22; font-weight: bold}
+
+/* Search results */
+.advancedsearch {
+    border: 1pt solid #ADB9CC;
+}
+
+.advancedsearch td {
+    vertical-align: top;
+    background-color: #E7E7E7;
+    border: 0px;
+}
+
+.advancedsearch td.searchfor {
+    font-weight: bold;
+}
+
+.advancedsearch input {
+    border: 1px solid #ADB9CC;
+    background-color: #fff;
+}
+
+.advancedsearch input[disabled] {
+    background-color: #eee;
+}
+
+.advancedsearch td.submit {
+    border-top: 1px solid #ADB9CC;
+    background-color: #fff;
+    text-align: right;
+}
+
+.advancedsearch optioni, select {
+    border: 1px solid #ADB9CC;
+    background-color: #fff;
+}
+
+
+.searchresults dt {
+    margin-top: 1em;
+    font-weight: normal;
+}
+
+.searchresults dd, .searchresults p {
+    font-size: 0.85em;
+}
+
+.searchresults .searchhitinfobar {
+    color: #008000;
+    margin-left: 15px;
+    margin-top: 0;
+}
+
+p.searchstats {
+    font-size: 0.8em;
+    text-align: right;
+    width: 100%;
+    background-color: #E6EAF0;
+    border-top: 1px solid #9088DC;
+    padding: 2px;
+}
+
+p.searchhint {
+    background-color: #E6EAF0;
+    border: 1px solid #9088DC;
+    padding: 2px;
+}
+
+.searchpages {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.searchpages tr, .searchpages td {
+    border: 0;
+    padding: 5px;
+    margin: 0;
+    text-align: center;
+    vertical-align: middle;
+    color: #b93a58;
+    font-weight: bold;
+    font-size: 1.05em;
+}
+
+.searchpages td a, .searchpages td a:link {
+    text-decoration: underline;
+}
+
+/* MonthCalendar css */
+
+/* days without and with pages linked to them */
+a.cal-emptyday {
+    color: #777777;
+    text-align: center;
+}
+a.cal-usedday {
+    color: #000000;
+    font-weight: bold;
+    text-align: center;
+}
+/* general stuff: workdays, weekend, today */
+td.cal-workday {
+    background-color: #DDDDFF;
+    text-align: center;
+}
+td.cal-weekend {
+    background-color: #FFDDDD;
+    text-align: center;
+}
+td.cal-today {
+    background-color: #CCFFCC;
+    border-style: solid;
+    border-width: 2pt;
+    text-align: center;
+}
+/* invalid places on the monthly calendar sheet */
+td.cal-invalidday {
+    background-color: #CCCCCC;
+}
+/* links to prev/next month/year */
+a.cal-link {
+    color: #000000;
+    text-decoration: none;
+}
+th.cal-header {
+    background-color: #DDBBFF;
+    text-align: center;
+}
+
+/* for MonthCalendar mouseover info boxes */
+TABLE.tip {
+    color: black;
+    background-color: #FF8888;
+    font-size: small;
+    font-weight: normal;
+    border-style: solid;
+    border-width: 1px;
+}
+
+TH.tip {
+    background-color: #FF4444;
+    font-weight: bold;
+    text-align: center;
+}
+
+TD.tip {
+    text-align: left;
+}
+*[dir="rtl"] TD.tip {
+    text-align: right;
+}
+
+/* end MonthCalendar stuff */
+
+#message .hint {font-style: italic;}
+#message .info {
+    float: none;
+    font-size: 1em;
+    color: black;
+}
+#message .info:before {
+    content: url('../img/icon-info.png');
+    margin: 0 0.5em 0 0.25em;
+    vertical-align: middle;
+}
+#message .warning:before {
+    content: url('../img/alert.png');
+    margin: 0 0.5em 0 0.125em;
+    vertical-align: middle;
+}
+#message .error:before {
+    content: url('../img/icon-error.png');
+    margin: 0 0.5em 0 0.125em;
+    vertical-align: middle;
+}
+#message a.clear-link {
+    display: block;
+    margin: 0.75em 0 0 0;
+    font-size: small;
+}
+
+
+/* admonition start */
+#content div.caution,
+#content div.important,
+#content div.note,
+#content div.tip,
+#content div.warning {
+    border: 1pt solid #E5E5E5;
+    background-color: #F9F9FF;
+    color: black;
+
+    margin: 10pt 30pt 10pt 30pt;
+    background-repeat: no-repeat;
+    background-position: 8px 8px;
+    min-height: 64px; /*64=48+8+8 but doesn't work with IE*/
+    padding-left: 64px;
+}
+
+#content div.caution p,
+#content div.important p,
+#content div.note p,
+#content div.tip p,
+#content div.warning p {
+    margin-top: 8px; /*to align text with bg graphic*/
+}
+
+#content div.tip { background-image: url("../img/admon-tip.png"); }
+#content div.note { background-image: url("../img/admon-note.png"); }
+#content div.important { background-image: url("../img/admon-important.png"); }
+#content div.caution { background-image: url("../img/admon-caution.png"); }
+#content div.warning { background-image: url("../img/admon-warning.png"); }
+
+/* admonition end */
+
+
+
+
+/* =============================================================================
+   custom moinmoin css
+   ========================================================================== */
+
 
 div.wikibar {
     background: #eee;
@@ -588,6 +1037,10 @@ div#editor-help {
     padding: 1em;
     color: #333;
 }
+
+/* =============================================================================
+   End moinmoin
+   ========================================================================== */
 
 /* anchors */
 
